Attempt to fix feature box text alignment
I set constraints on the height of the box and width of the text in order to fix it. Now the learn more links are misaligned and the images are too small but at least the boxes are all the same dimensions and the top feature box's text align with the one below it.

--- a/Datawarehouse/css/style.css
+++ b/Datawarehouse/css/style.css
@@ -136,7 +136,10 @@ a.learn-more:hover {
 
 .single-features {
 	border-radius: 34px;
+	/** setting constraints on the box in order to fix it */
+	height: 300px;
 }
+
 
 .feature-text h3 {
 	font-weight: 600;
@@ -149,12 +152,14 @@ a.learn-more:hover {
 	font-size: 17px;
 	line-height: 190.18%;
 	color: #000000;
+	/** setting constraints on the box in order to fix it */
+	width: 400px;
 }
 
 .feature-img img {
-    width: 350px;
-    margin-right: 40px;
-    margin-top: 60px;
+	width: 350px;
+	margin-right: 40px;
+	margin-top: 60px;
 }
 
 .feature-text a {
